# jitterentropy-library

./: .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  COPYING  LICENSE  Makefile  README.md  TODO  flake.nix  jitterentropy-base-user.h  jitterentropy-base.c  jitterentropy-gcd.c  jitterentropy-gcd.h  jitterentropy-stat.c  jitterentropy.h
arch/: jitterentropy-arch-cache.c  jitterentropy-arch-cache.h  jitterentropy-arch-fips.c  jitterentropy-arch-fips.h  jitterentropy-arch-memory.c  jitterentropy-arch-memory.h  jitterentropy-arch-ncpu.c  jitterentropy-arch-ncpu.h  jitterentropy-arch-sched.c  jitterentropy-arch-sched.h  jitterentropy-arch-thread.c  jitterentropy-arch-thread.h  jitterentropy-arch-timer.h  jitterentropy-arch-uuid.c  jitterentropy-arch-uuid.h  jitterentropy-base-power.h  jitterentropy-base-s390.h  jitterentropy-base-windows.h  jitterentropy-base-x86-windows.h  jitterentropy-base-x86.h
arch/android/: Android.mk
cmake/: jitterentropy.pc.in
doc/: jitterentropy.3
linux_kernel/: Kbuild  Kbuild.config  Kbuild.source  Makefile  README.md  jitterentropy_chardev.c  jitterentropy_chardev.h  jitterentropy_compat.h  jitterentropy_error.h  jitterentropy_hwrng.c  jitterentropy_hwrng.h  jitterentropy_kcapi.c  jitterentropy_kcapi.h  jitterentropy_mem.c  jitterentropy_mod.c  jitterentropy_proc.c  jitterentropy_proc.h  jitterentropy_testing.c  jitterentropy_testing.h  jitterentropy_uapi.h
src/: jitterentropy-base.c  jitterentropy-base.h  jitterentropy-gcd.c  jitterentropy-gcd.h  jitterentropy-health.c  jitterentropy-health.h  jitterentropy-internal.h  jitterentropy-noise.c  jitterentropy-noise.h  jitterentropy-sha3.c  jitterentropy-sha3.h  jitterentropy-status.c  jitterentropy-timer.c  jitterentropy-timer.h
tests/chardev/: CMakeLists.txt  jitterentropy-chardev-status.c
tests/gcd/: CMakeLists.txt  Makefile  gcd.c
tests/raw-entropy/: README.md  extract-dists  extract-pvalues.pl  extractlsb.c  prep-iid-tests  process-pvalues
tests/raw-entropy/recording_kernelspace/: Makefile.foldtime  Makefile.lfsrtime  jitterentropy-foldtime.c  jitterentropy-lfsrtime.c
tests/raw-entropy/recording_restart_kernelspace/: README.md  boottime_test_record.sh  install.sh
tests/raw-entropy/recording_runtime_kernelspace/: CMakeLists.txt  README.md  getrawentropy.c  invoke_testing.sh  invoke_testing_fips.sh  invoke_testing_hashloop.sh  invoke_testing_helper.sh  invoke_testing_memloop.sh  invoke_testing_ntg1.sh
tests/raw-entropy/recording_runtime_kernelspace/attic/: jitterentropy-foldtime.c  jitterentropy-lfsrtime.c
tests/raw-entropy/recording_userspace/: CMakeLists.txt  LICENSE  Makefile.foldtime  Makefile.hashtime  Makefile.lfsroutput  Makefile.lfsrtime  Makefile.osr  Makefile.rng  README.md  analyze_depth.sh  analyze_memsize.sh  analyze_options.sh  invoke_testing.sh  invoke_testing_commonop.sh  invoke_testing_hashloop.sh  invoke_testing_helper.sh  invoke_testing_l2.sh  invoke_testing_memloop.sh  invoke_testing_ntg1.sh  jitterentropy-base-user.h  jitterentropy-base.c  jitterentropy-foldtime.c  jitterentropy-hashtime.c  jitterentropy-lfsroutput.c  jitterentropy-lfsrtime.c  jitterentropy-osr.c  jitterentropy-rng.c  jitterentropy.h
tests/raw-entropy/validation-restart/: README.md  analyze_options.sh  extractlsb.c  processdata.sh  processdata_helper.sh  processdata_ntg1.sh
tests/raw-entropy/validation-restart-kernel/: extractlsb.c  processdata.sh
tests/raw-entropy/validation-runtime/: CMakeLists.txt  LICENSE  Makefile  README.md  analyze_options.sh  extractlsb.c  processdata.sh  processdata_hashloop.r  processdata_hashloop.sh  processdata_helper.sh  processdata_l2.r  processdata_l2.sh  processdata_l2_minentropy.r  processdata_memloop.r  processdata_memloop.sh  processdata_minentropy.r  processdata_ntg1.sh
tests/raw-entropy/validation-runtime-kernel/: README.md  extractlsb.c  processdata.sh
